# libcamera-net

./: README.md
.github/workflows/: continuous.yml
.nuke/: build.schema.json  parameters.json
src/: LibcameraNet.sln  LibcameraNet.sln.DotSettings  NuGet.config  global.json
src/Bld.LibcameraNet/: Bld.LibcameraNet.csproj  Camera.cs  CameraConfiguration.cs  CameraList.cs  CameraManager.cs  Class1.cs  ColorSpace.cs  ControlList.cs  FrameBuffer.cs  FrameBufferAllocator.cs  FrameBufferPlane.cs  FrameBufferPlanes.cs  IAsFrameBuffer.cs  KnownPixelFormats.cs  LibcameraFrameBuffer.cs  LibcameraStream.cs  MapInfo.cs  MappedPlane.cs  MemoryMappedFrameBuffer.cs  PixelFormats.cs  PropertyList.cs  Request.cs  StreamConfiguration.cs  StreamFormats.cs
src/Bld.LibcameraNet.Example/: Program.cs
src/Bld.LibcameraNet/CameraProperties/: CameraColorFilterArrangement.cs  CameraLocation.cs  CameraModel.cs  CameraPixelArrayActiveAreas.cs  CameraPixelArrayOpticalBlackRectangles.cs  CameraPixelArraySize.cs  CameraRotation.cs  CameraScalerCropMaximum.cs  CameraSensorSensitivity.cs  CameraSystemDevices.cs  CameraUnitCellSize.cs  IProperty.cs
src/Bld.LibcameraNet/Controls/: ControlValue.cs  ControlValueDefinition.cs  ControlValueFactory.cs  TypeMismatchException.cs
src/Bld.LibcameraNet/Interop/: CameraConfigurationStatus.cs  ControlType.cs  LibcameraConsts.cs  LibcameraNative.cs  PixelFormat.cs  PropertyId.cs  RequestStatus.cs  StreamRole.cs
src/Bld.LibcameraNet/Interop/Libc/: LibcNative.cs  MmapFlags.cs  MmapProts.cs  WhenceFlags.cs
src/Bld.LibcameraNet/Interop/Libcamera/: CameraConfigurationStatus.cs  ControlType.cs  LibcameraConsts.cs  LibcameraNative.cs  LibcameraSize.cs  PixelFormat.cs  PropertyId.cs  RequestStatus.cs  StreamRole.cs
src/Bld.LibcameraNet/runtimes/linux-arm64/native/: libcamera-shim.so.0.3.2  liblibcamera-shim.so.0.3.2
src/examples/Bld.LibcameraNet.Example/: Bld.LibcameraNet.Example.csproj  Program.cs
src/examples/Bld.LibcameraNet.JpegCapture/: Bld.LibcameraNet.JpegCapture.csproj  Program.cs
src/libcamera-shim/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bak  LibcameraShim.proj
src/libcamera-shim/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
src/libcamera-shim/include/: geometry.h  stream.h
src/libcamera-shim/source/: stream.cpp
